project/log/20250610_114313.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

object3D.VS.hlsl:24:12: error: no member named 'normal' in 'VertexShaderOutput'
    output.normal = normalize(mul(input.normal,(float32_t3x3)gTransformationMatrix.World));
    ~~~~~~ ^

